# rpi-dht22-dashboard

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  copy_files.txt  preprocess_data.py  pyproject.toml  requirements.txt  visualize.py
data/: test_log_2021-11-15.csv  test_log_2021-11-16.csv  test_log_2021-11-17.csv  test_log_2021-11-18.csv  test_log_2021-11-19.csv  test_log_2021-11-20.csv  test_log_2021-11-21.csv  test_log_2021-11-22.csv  test_log_2021-11-23.csv  test_log_2021-11-24.csv  test_log_2021-11-25.csv  test_log_2021-11-26.csv  test_log_2021-11-27.csv  test_log_2021-11-28.csv  test_log_2021-11-29.csv  test_log_2021-11-30.csv  test_log_2021-12-01.csv  test_log_2021-12-02.csv  test_log_2021-12-03.csv  test_log_2021-12-04.csv  test_log_2021-12-05.csv  test_log_2021-12-06.csv  test_log_2021-12-07.csv  test_log_2021-12-08.csv  test_log_2021-12-09.csv  test_log_2021-12-10.csv  test_log_2021-12-11.csv  test_log_2021-12-12.csv  test_log_2021-12-13.csv  test_log_2021-12-14.csv  test_log_2021-12-15.csv  test_log_2021-12-16.csv  test_log_2021-12-17.csv  test_log_2021-12-18.csv  test_log_2021-12-19.csv  test_log_2021-12-20.csv  test_log_2021-12-21.csv  test_log_2021-12-22.csv  test_log_2021-12-23.csv  test_log_2021-12-24.csv  (+346 more)
webapp/: .env.example  __init__.py  data.py  environ.py
