[tool.poetry]
name = "rpi-dht22-dashboard"
version = "0.1.0"
description = ""
authors = ["Tamás Börcsök <tborcsok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.3.1"
pandas = "^1.4.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
