[tool.poetry]
name = "rpi-dht22-dashboard"
version = "0.1.0"
description = ""
authors = ["Tamás Börcsök <tborcsok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.3.1"
pandas = "^1.4.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
dash-bootstrap-components = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.0"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.7"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
