[project]
authors = [{ name = "Tamás Börcsök", email = "tborcsok@gmail.com" }]
requires-python = "<4.0,>=3.10"
name = "rpi-dht22-dashboard"
version = "0.1.0"
description = ""
dependencies = [
    "dash<3.0.0,>=2.3.1",
    "gunicorn<24.0.0,>=23.0.0",
    "python-dotenv<1.0.0,>=0.20.0",
    "dash-bootstrap-components<2.0.0,>=1.3.1",
    "polars>=1.29.0",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.13.0",
    "black<23.0.0,>=22.10.0",
    "isort<6.0.0,>=5.10.1",
    "pylint<3.0.0,>=2.15.7",
    "mypy<2.0.0,>=1.0.0",
]

[tool.uv]
default-groups = []
